@startuml
class PlantConfig <<sealed>> {
    - _id : string
    - _name : string
    - _growTime : float
    - _sprite : Sprite
    - _seed : Sprite
    - _platPhases : List<PlatPhase>
    + ID : string <<get>>
    + Name : string <<get>>
    + Type : UniqItemsType <<get>>
    + GrowTime : double <<get>>
    + PlatPhases : List<PlatPhase> <<get>>
    + Sprite : Sprite <<get>>
    + Seed : Sprite <<get>>
}
class PlatPhase <<sealed>> {
    - _sprite : Sprite
    - _progress : float
    + Sprite : Sprite <<get>>
    + Progress : float <<get>>
}
ScriptableObject <|-- PlantConfig
IUniq <|-- PlantConfig
@enduml
